RESOLVED FIXED273984
REGRESSION (278473@main): [ iOS ] http/tests/site-isolation/window-open-with-name-cross-site.html is a consistent timeout
https://bugs.webkit.org/show_bug.cgi?id=273984
Summary REGRESSION (278473@main): [ iOS ] http/tests/site-isolation/window-open-with-...
Jay Stfleur
Reported 2024-05-09 17:09:34 PDT
Description: http/tests/site-isolation/window-open-with-name-cross-site.html test is a consistent timeout and is slow as well on iOS after changes on 278473@main. Buildbot URL: https://build.webkit.org/#/builders/927/builds/1817 History: https://results.webkit.org/?suite=layout-tests&test=http%2Ftests%2Fsite-isolation%2Fwindow-open-with-name-cross-site.html&platform=ios Diff/Image Diff/Crash Log: --- /Volumes/Data/worker/Apple-iPadOS-17-Simulator-Release-WK2-Tests/build/layout-test-results/http/tests/site-isolation/window-open-with-name-cross-site-expected.txt +++ /Volumes/Data/worker/Apple-iPadOS-17-Simulator-Release-WK2-Tests/build/layout-test-results/http/tests/site-isolation/window-open-with-name-cross-site-actual.txt @@ -1,10 +1,9 @@ +CONSOLE MESSAGE: TypeError: null is not an object (evaluating 'window.opener.postMessage') +FAIL: Timed out waiting for notifyDone to be called + Verifies window.open with a target name correctly reuses a main frame On success, you will see a series of "PASS" messages, followed by "TEST COMPLETE". -PASS event.data is 'second opened window received: sent to first window, which should be reused' -PASS successfullyParsed is true - -TEST COMPLETE click to run test manually in a browser REPRODUCIBILITY: run-webkit-tests --ios-simulator http/tests/site-isolation/window-open-with-name-cross-site.html --child-process=1 --iterations 5
Attachments
Radar WebKit Bug Importer
Comment 1 2024-05-09 17:09:53 PDT
EWS
Comment 2 2024-05-09 23:42:39 PDT
Test gardening commit 278605@main (12f6c2c30224): <https://commits.webkit.org/278605@main> Reviewed commits have been landed. Closing PR #28380 and removing active labels.
Sihui Liu
Comment 3 2024-06-21 01:55:46 PDT
EWS
Comment 4 2024-06-21 16:39:40 PDT
Committed 280263@main (2d924a324020): <https://commits.webkit.org/280263@main> Reviewed commits have been landed. Closing PR #30035 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.